@@ -46,7 +46,7 @@ import java.util.concurrent.TimeUnit;
 import javax.net.ssl.SSLContext;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.UriBuilder;
-import org.apache.commons.codec.binary.Base64;
+import javax.xml.bind.DatatypeConverter;
 import org.apache.http.auth.BasicUserPrincipal;
 import org.apache.http.config.RegistryBuilder;
 import org.apache.http.conn.socket.ConnectionSocketFactory;
@@ -391,7 +391,7 @@ public abstract class AbstractKomodoServiceTest implements V1Constants {
         // Add this to enable BASIC authorization
         //
         String credentials = USER_NAME + COLON + PASSWORD;
-        byte[] encCredentials = Base64.encodeBase64(credentials.getBytes());
+        byte[] encCredentials = DatatypeConverter.parseBase64Binary(credentials);
 
         String value = "Basic " + new String(encCredentials);
         request.header("Authorization", value);
